--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
   - "nightly" # currently points to 3.7-dev
 # command to install dependencies
 install:
-  - pip install -e requirements-dev.txt
+  - pip install pytest
   - pip install .
 # command to run tests
 script: pytest tests.py
