--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ python:
   - "nightly" # currently points to 3.7-dev
 # command to install dependencies
 install:
-  - pip install pytest
+  - pip install pytest pytest-cov
   - pip install .
 # command to run tests
-script: pytest tests.py
+script: py.test tests.py
